# aura-flow

./: .gitignore  DEVELOPMENT.md  Dockerfile  README.md  aura_engine.py  build_exe.py  convert_icon.py  crash_log.txt  download_medium_model.py  launcher.py  main.py  post_formatter.py  prepare_model.py  requirements.txt  run_aura.bat
aura-flow-cpp/: .gitignore  BUILD_RU.md  CMakeLists.txt  CMakeSettings.json  deploy.bat
aura-flow-cpp/src/: main.cpp
aura-flow-cpp/src/audio/: AudioRecorder.cpp  AudioRecorder.h
aura-flow-cpp/src/engine/: AuraEngine.cpp  AuraEngine.h
aura-flow-cpp/src/system/: ClipboardManager.cpp  ClipboardManager.h  HotkeyManager.cpp  HotkeyManager.h
aura-flow-cpp/src/ui/: OverlayWindow.cpp  OverlayWindow.h  SystemTray.cpp  SystemTray.h
aura-flow-cpp/src/utils/: PostFormatter.cpp  PostFormatter.h
docs/: ARCHITECTURE.md  BUILD_GUIDE.md
